fixed data overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,15 @@ font-family: 'Noto Serif', serif;
 body{
     padding:0px;
     margin:0px;
+    font-family:'Roboto',sans-serif;
+    color:#4E4E4E;
+    font-size: 18px;
 }
 
 section{
     padding:120px 0px;
 }
+
 .common-heading{
     font-family:'Noto Serif',serif;
     color:#4AAB00;
@@ -19,8 +23,9 @@ section{
     margin:0px;
     padding:0px;
 }
+
 .common-button{
-    max-height:42px;
+    height:42px;
     font-size:18px;
     background-color:#4AAB00;/*primary green*/
     border:none;
@@ -28,22 +33,18 @@ section{
     border-radius:3px;
     padding:10px 15px;
 }
-.page{
-    font-family:'Roboto',sans-serif;
-    color:#4E4E4E;
-    font-size: 18px;
-}
+
 /*****************************************************************************/
 /*header container*/
 
 .header-wrapper{
     position:fixed;
     top:0px;
-    background-color:black;
     width:100%;
-    max-height:90px;
-    display:block;
+    background-color:black;
+    height:90px;
     z-index:1;
+    clear:both;
 }
 .logo-position{
     float:left;
@@ -72,7 +73,7 @@ li img{
 }
 li button{
     margin-left:10px;
-    max-height:42px;
+    height:42px;
     font-size:18px;
     background-color:#4AAB00;/*primary green*/
     border:none;
@@ -89,31 +90,30 @@ li a{
 
 /*Section 1 Main*/
 .poster{
-    height:350px;
+    height:auto;
     position: static;
     background-image: url('../images/banner_image.png');
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-position:bottom;
+    background-position:center;
     background-size:cover;
     margin-top:90px;
 }
 .section-one{
-    max-width:70%;
-    max-height:50%;
+    width:70%;
+    height:50%;
     margin-left:10%;
 }
 .section-one-heading{
     font-family:'Noto Serif',serif;
     color:#ECFFED;
     font-size:72px;
-    margin:10px 10px;
 }
 .section-one-para{
     color:#ECFFED;
     font-family:'Roboto',sans-serif;
-    max-width:70%;
-    height:fit-content; 
+    width:70%;
+    height:auto; 
     font-size: 16px; 
 }
 .section-one-more-details{
@@ -125,15 +125,16 @@ li a{
 .section-about-us{
     position: static;
     height:auto;
-    background-color:rgb(167, 41, 41);
+    background-color:whitesmoke;
     margin:0px;
+    overflow:auto;
+    clear:both;
 }
 .about-us-content{
     max-width:30%;
     float: left;
     margin-left: 10%;
     height: auto;
-    margin-bottom: 120px;
 }
 .about-us-para{
 font-size:18px;
@@ -159,7 +160,7 @@ font-size:18px;
     background-image:url('../images/speciality_bg.png'); 
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-position: bottom;
+    background-position: center;
     background-size:cover;
     margin:0px;
     clear:both;
@@ -173,7 +174,7 @@ font-size:18px;
 .our-spec-para{
     margin:5% 25% ;
     text-align:center;
-    max-width:50%;
+    width:50%;
     height:auto;
     color:#ECFFED;
 }
@@ -182,8 +183,9 @@ font-size:18px;
     height:auto;
 }
 .card-container{
-    margin:0px 3.5% 0px 3.5%;
+    padding-left:90px;
 }
+
 .speciality-cards{
     width: 264px;
     height:300px;
@@ -293,7 +295,6 @@ h2.heading{
     color:green;
     font-size: 22px;
     float:left;
-    display:block;
     margin:10px 0px;
 }
 form{
@@ -303,7 +304,6 @@ form p{
     margin:10px 10px;
 }
 input{
-    display:block;
     float:left;
     width:210px;
     height:40px;
@@ -364,4 +364,15 @@ padding-left: 3px;
     text-align: center;
     margin-bottom:10px;
 }
-/*******************************************************************************************/
+/*******************************************************************************************
+li{
+    border:
+}
+
+div,li,ul,footer,header{
+    border :2px solid red ;
+}
+section{
+    border:2px solid yellow;
+}
+*/
